--- a/_posts/2026-02-18-Welcome.md
+++ b/_posts/2026-02-18-Welcome.md
@@ -7,4 +7,8 @@ categories: [welcome]
 tags: [hello]
 excerpt: ""
 ---
-Welcome!
+# Welcome!
+
+Hello!
+
+![Tux, the Linux mascot](/assets/images/welcome.png)
