some quick stats

--- a/_posts/2026-02-18-Welcome.md
+++ b/_posts/2026-02-18-Welcome.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title: "Welcome"
+title: "afghanistan"
 date: 2024-01-01 12:00:00 -0000
 permalink: welcome/
-categories: [welcome]
-tags: [hello]
+categories: [countries]
+tags: [afghanistan]
 excerpt: ""
 ---
+# quick stats
+* population is around 41 million.
+* size is 652,864 km2 (252,072 sq mi)
